master
------

* Reduce Arachnys branding a bit
* Fix 404 page for logged out users
* Style forms with django-bootstrap-form
* [[#605](https://github.com/arachnys/cabot/issues/605)] Fix http check forms auto-filling username/password
* [[#607](https://github.com/arachnys/cabot/issues/607)] Fix checks for websites service non utf-8 content

Version 0.11.12
---------------

* Upgrade django to 1.11.11
* Debounce JenkinsCheck on the number of job failures
  - Previously it would fail after cabot checked the jenkins api N times, even if the jenkins job had only failed once

Version 0.11.11
---------------

* Fix /api/oncall endpoint not working with basic auth

Version 0.11.10
---------------

* Add /api/oncall endpoint

Version 0.11.9
--------------

* Fix issue where Jenkins environment variables were required on first launch

Version 0.11.8
--------------

* Bump cabot-alert-slack to 0.8.2
* Update LDAP dependencies
* Add ENABLE_SUBSCRIPTION and ENABLE_DUTY_ROTA options
* [[#556](https://github.com/arachnys/cabot/issues/556)] Fix issue with HttpStatusCheck with unicode content

Version 0.11.7
--------------

* Fix check plugins not displaying checks correctly on service details page

Version 0.11.6
--------------

* Add cloudwatch check plugin to dockerfile by default
  - Can be enabled by adding "cabot_check_cloudwatch" to CABOT_PLUGINS_ENABLED

Version 0.11.5
--------------

* Fix multiple jenkins configs not working properly
  - Due to caching on the client, the first config to be checked would always be used

Version 0.11.4
--------------

* Switch from jenkinsapi to python-jenkins
  - Fixes performance regression introduced in 0.11

Version 0.11.3
--------------

* [[#551](https://github.com/arachnys/cabot/issues/551)] Fix in-progress jenkins jobs being marked as failing

Version 0.11.2
--------------

* Fix pypi source distribution missing requirements for setup.py

Version 0.11.1
--------------

* Fix migration disassociating checks from services/instances